# Compiler

./: .gitignore  README.md  compiler.py  pyproject.toml  requirements.txt  space-requirements.txt  space.md  ui.py
.github/workflows/: deploy-hf.yml
samples/: arithmetic.cl  conditionals.cl  errors.cl  for_loop.cl  hello.cl  negation.cl  while_loop.cl
src/: __init__.py  ast_nodes.py  lexer.py  parser.py  semantic.py
tests/: __init__.py  test_lexer.py  test_parser.py  test_semantic.py
webui/: __init__.py  app.py  pipeline.py  styles.css
